# uzcy

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPENDENCIES.md  PLAN.md  README.md  TODO.md  WORK.md  build.sh  install.sh  llms.txt  publish.sh  pyproject.toml  test.sh
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  backends.md  format.md  index.md  setup.md
examples/simple/: a.h  b.c  c.cpp
examples/simple_expected/: a.h
src/uzcy/: __init__.py  clang_backend.py  cli.py  config.py  discovery.py  maps.py  paths.py  text_scan.py  writer.py
src/uzcy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_clang_backend.py  test_cli.py  test_config.py  test_discovery.py  test_maps.py  test_paths.py  test_text_scan.py  test_writer.py
