# this_file: pyproject.toml

[project]
name = "uzcy"
description = "Reverse include dependency tracker for C/C++ (used_by blocks)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Adam Twardoch", email = "adam+github@twardoch.com" }]
keywords = [
  "c",
  "cpp",
  "include",
  "dependency",
  "clang",
  "used-by",
  "code-analysis",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]
dynamic = ["version"]
dependencies = [
  "fire>=0.6.0",
  "loguru>=0.7.2",
  "pydantic>=2.7.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]
test = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[project.urls]
Documentation = "https://twardoch.github.io/uzcy/"
Issues = "https://github.com/twardoch/uzcy/issues"
Source = "https://github.com/twardoch/uzcy"

[project.scripts]
uzcy = "uzcy.cli:main"

[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/uzcy/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/uzcy"]

[tool.hatch.build.targets.wheel.force-include]
"src/uzcy/py.typed" = "uzcy/py.typed"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["build", "dist", ".venv", "src/uzcy/__version__.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PTH", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/uzcy"]
exclude = ["build/", "src/uzcy/__version__.py"]

[[tool.mypy.overrides]]
module = ["fire", "fire.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-xvs"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/uzcy"]
branch = true
omit = ["src/uzcy/__version__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
